fix: text alignment inside streak badge

--- a/src/styles/_tasks.scss
+++ b/src/styles/_tasks.scss
@@ -46,11 +46,12 @@
             color: #000;
             font-weight: 600;
             border-radius: 8px;
-            padding: 5px 10px;
+            padding: 0 10px;
             font-size: 16px;
             white-space: nowrap;
             flex-shrink: 0;
             height: 32px;
+            line-height: 32px;
         }
         .task-name {
             white-space: nowrap;
